# EdgeRAG

./: CITATION.cff  LICENSE-TODO.txt  README.md  pyproject.toml
artifacts/: README.md
artifacts/paper/main_results/: All_results.xlsx  best_p3.csv  fail_stage_summary.csv  fail_summary.csv  p1_summary.csv  p23_by_config.csv  publication_tables.xlsx  table_generator_f1.csv  table_generator_grounded_em_all.csv  table_generator_grounded_sas_all.csv  table_generator_grounded_sas_hit.csv
artifacts/paper/manuscript/: Bib.txt  Paper-AI-latex.txt
artifacts/paper/results/: best_p2.csv  p0_summary.csv  p1_sas_summary.csv  p23_sas_by_config.csv  table_failure_stages.csv  table_generator_em.csv  table_generator_grounded_em_hit.csv  table_generator_grounded_f1_all.csv  table_generator_grounded_f1_hit.csv  table_generator_sas.csv  table_retrieval_summary.csv
artifacts/paper/secondary_results/: best_p2.csv  best_p3.csv  fail_stage_summary.csv  fail_summary.csv  p0_summary.csv  p1_sas_summary.csv  p1_summary.csv  p23_by_config.csv  p23_sas_by_config.csv  publication_tables.xlsx  (+12 more)
configs/: phase1.json
docs/: COMMANDS.md  MIGRATION.md  PROJECT_STRUCTURE.md  REPRODUCIBILITY.md  RESULTS.md
legacy/: README.md
legacy/original_snapshot/: edge_rag_experiment_fix10.py  edge_rag_final_analysis_v2_5.py  edge_rag_final_analysis_v2_7_sas.py  estimate_gpu_runtime.py  rebuild_resume_from_results.py
src/edgerag/: __init__.py
tests/: test_analysis_paths.py  test_config.py  test_metrics.py  test_resume.py  test_run_cli.py  test_runtime.py  test_runtime_metadata.py  test_sas.py
(+22 files in other folders)
